Closed Bug 292397 Opened 21 years ago Closed 21 years ago

JS_VERSION 130 doesn't build

Categories

(Core :: JavaScript Engine, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

Details

Attachments

(1 obsolete file)

link.exe kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib oldnames.lib /nologo /subsystem:windows /dll /debug /pdb:none /machine:I386 /opt:ref /opt:noicf /base:0x61000000 fdlibm/WINNT5.1_DBG.OBJ/fdlibm.lib \ /out:"WINNT5.1_DBG.OBJ/js32.dll" /pdb:none\ /implib:"WINNT5.1_DBG.OBJ/js32.lib" WINNT5.1_DBG.OBJ/jsapi.obj WINNT5.1_DBG.OBJ/jsarena.obj WINNT5.1_DBG.OBJ/jsarray.obj WINNT5.1_DBG.OBJ/jsatom.obj WINNT5.1_DBG.OBJ/jsbool.obj WINNT5.1_DBG.OBJ/jscntxt.obj WINNT5.1_DBG.OBJ/jsdate.obj WINNT5.1_DBG.OBJ/jsdbgapi.obj WINNT5.1_DBG.OBJ/jsdhash.obj WINNT5.1_DBG.OBJ/jsdtoa.obj WINNT5.1_DBG.OBJ/jsemit.obj WINNT5.1_DBG.OBJ/jsexn.obj WINNT5.1_DBG.OBJ/jsfun.obj WINNT5.1_DBG.OBJ/jsgc.obj WINNT5.1_DBG.OBJ/jshash.obj WINNT5.1_DBG.OBJ/jsinterp.obj WINNT5.1_DBG.OBJ/jslock.obj WINNT5.1_DBG.OBJ/jslog2.obj WINNT5.1_DBG.OBJ/jslong.obj WINNT5.1_DBG.OBJ/jsmath.obj WINNT5.1_DBG.OBJ/jsnum.obj WINNT5.1_DBG.OBJ/jsobj.obj WINNT5.1_DBG.OBJ/jsopcode.obj WINNT5.1_DBG.OBJ/jsparse.obj WINNT5.1_DBG.OBJ/jsprf.obj WINNT5.1_DBG.OBJ/jsregexp.obj WINNT5.1_DBG.OBJ/jsscan.obj WINNT5.1_DBG.OBJ/jsscope.obj WINNT5.1_DBG.OBJ/jsscript.obj WINNT5.1_DBG.OBJ/jsstr.obj WINNT5.1_DBG.OBJ/jsutil.obj WINNT5.1_DBG.OBJ/jsxdrapi.obj WINNT5.1_DBG.OBJ/jsxml.obj WINNT5.1_DBG.OBJ/prmjtime.obj Creating library WINNT5.1_DBG.OBJ/js32.lib and object WINNT5.1_DBG.OBJ/js32.exp jsapi.obj : error LNK2001: unresolved external symbol _js_ErrorFromException jsatom.obj : error LNK2001: unresolved external symbol _js_Error_str WINNT5.1_DBG.OBJ/js32.dll : fatal error LNK1120: 2 unresolved externals
Assignee: general → timeless
Status: UNCONFIRMED → ASSIGNED
Attachment #182212 - Flags: review?(brendan)
Depends on: 292398
Blocks: 292396
Comment on attachment 182212 [details] [diff] [review] 1.3 specific changes to get the build happy (must be applied after 1.4) Maybe you should roll these all up into one bug. I don't see the point in taking them one by one, and the patches overlap. This one looks good, OTOH, and you've already filed four bugs, so I'll go along. Ask for approval for 1.8b3, at this point. /be
Attachment #182212 - Flags: review?(brendan) → review+
Comment on attachment 182212 [details] [diff] [review] 1.3 specific changes to get the build happy (must be applied after 1.4) this only affects build configurations which don't currently build. (these configurations are obviously not gecko.)
Attachment #182212 - Flags: approval1.8b3?
Comment on attachment 182212 [details] [diff] [review] 1.3 specific changes to get the build happy (must be applied after 1.4) a=chofmann
Attachment #182212 - Flags: approval1.8b3? → approval1.8b3+
Flags: testcase-
Attachment #182212 - Flags: approval1.8b3+ → approval1.8b2+
Comment on attachment 182212 [details] [diff] [review] 1.3 specific changes to get the build happy (must be applied after 1.4) 2005-05-06 14:44 mozilla/js/src/jsatom.c 3.63 mozilla/js/src/jsapi.c 3.197
Attachment #182212 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: