Bug 292397 JS_VERSION 130 doesn't build r=brendan a=asa